adjusted a few things to try and get the text to change colour whilst the .Active class is being called, but no luck thus far. Will continue with creating the website, so I don't waste too much time on this. I will come back to it at a later date, or as my mentor what the issue is

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -3,6 +3,7 @@
     background-color: #FFFDD0;
     min-height: 100vh;
 }
+
 .TitlePages {
     padding-top: 80px;
 }
@@ -12,11 +13,12 @@
 }
 
 a {
-    color: #FFFDD0 !important;
+    color: #FFFDD0;
     transition: color ease-in-out 0.5s;
 }
 
 a:hover {
+    color: #b29e83;
     text-decoration: none;
 }
 
