--- a/src/design/NavBar.module.css
+++ b/src/design/NavBar.module.css
@@ -2,3 +2,11 @@
     background-color: #643E36;
     border: 2px solid #3e2622;
 }
+
+.NavLink {
+    padding: 6px;
+}
+
+.Active i {
+    color: #3e2622;
+}
